[gd_scene load_steps=11 format=3 uid="uid://dhsnjfdlsi6f6"]

[ext_resource type="Script" path="res://entities/elevator_door/elevator_door.gd" id="1_jql16"]
[ext_resource type="AudioStream" uid="uid://cunin4dk1al7" path="res://assets/sounds/sfx/elevator_bing.mp3" id="2_ayufa"]
[ext_resource type="AudioStream" uid="uid://cpsvs0omgv2xs" path="res://assets/sounds/sfx/elevator_door.mp3" id="3_ljdom"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ts0ex"]
size = Vector3(0.5, 3, 1.75)

[sub_resource type="BoxMesh" id="BoxMesh_82vef"]
size = Vector3(0.25, 3, 1.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ofuyk"]
data = PackedVector3Array(-0.125, 1.5, 0.75, 0.125, 1.5, 0.75, -0.125, -1.5, 0.75, 0.125, 1.5, 0.75, 0.125, -1.5, 0.75, -0.125, -1.5, 0.75, 0.125, 1.5, -0.75, -0.125, 1.5, -0.75, 0.125, -1.5, -0.75, -0.125, 1.5, -0.75, -0.125, -1.5, -0.75, 0.125, -1.5, -0.75, 0.125, 1.5, 0.75, 0.125, 1.5, -0.75, 0.125, -1.5, 0.75, 0.125, 1.5, -0.75, 0.125, -1.5, -0.75, 0.125, -1.5, 0.75, -0.125, 1.5, -0.75, -0.125, 1.5, 0.75, -0.125, -1.5, -0.75, -0.125, 1.5, 0.75, -0.125, -1.5, 0.75, -0.125, -1.5, -0.75, 0.125, 1.5, 0.75, -0.125, 1.5, 0.75, 0.125, 1.5, -0.75, -0.125, 1.5, 0.75, -0.125, 1.5, -0.75, 0.125, 1.5, -0.75, -0.125, -1.5, 0.75, 0.125, -1.5, 0.75, -0.125, -1.5, -0.75, 0.125, -1.5, 0.75, 0.125, -1.5, -0.75, -0.125, -1.5, -0.75)

[sub_resource type="Animation" id="Animation_bubiy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wyxbo"]
resource_name = "close_door"
length = 6.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5, 0, -2), Vector3(-1.5, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jyqaw"]
resource_name = "open_door"
length = 6.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5, 0, 0), Vector3(-1.5, 0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vor1k"]
_data = {
"RESET": SubResource("Animation_bubiy"),
"close_door": SubResource("Animation_wyxbo"),
"open_door": SubResource("Animation_jyqaw")
}

[node name="LeftDoor" type="Area3D"]
script = ExtResource("1_jql16")

[node name="InElevatorArea" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ts0ex")

[node name="Door" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Door"]
mesh = SubResource("BoxMesh_82vef")
skeleton = NodePath("")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Door"]
shape = SubResource("ConcavePolygonShape3D_ofuyk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vor1k")
}

[node name="BingSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42966, 0, 0)
stream = ExtResource("2_ayufa")

[node name="DoorSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42966, 0, 0)
stream = ExtResource("3_ljdom")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
